--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>RentUp - Residence & Real Estate Website</title>
+    <title>JPN GROUP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
